--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
    <title>My Awesome Website</title>
     </head>
     <body>
-        <p>Lewis Smells</p>
+        <p>I am awsome</p>
     </body>
 </html>    
