--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <title>My Awesome Website</title>
     </head>
-    <body>
-        <p>I am awsome</p>
-    </body>
+      <body>
+        <p>I am awsome and this is a website that uses github and html.</p>
+      </body>
 </html>    
