--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
    <title>My Awesome Website</title>
+    <style>
+      p {
+        font: comic sans;
+        
+      }
+    </style>
     </head>
       <body>
         <p>I am awsome and this is a website that uses github and html.</p>
