--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>My Awesome Website</title>
     <style>
       p {
-        font: comic sans;
+        color: red;
         
       }
     </style>
