--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
    <title>My Awesome Website</title>
     <style>
       p {
-        color: red;
-        
+        color: red; 
+      }
+      body {
+        backround-color: lightorange;
       }
     </style>
     </head>
