--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     </head>
       <body>
         <p>I am awsome and this is a website that uses github and html.</p>
+        <p>I am red text on a not orange backround</p>
       </body>
 </html>    
