--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         color: red; 
       }
       body {
-        backround-color: lightorange;
+        backround-color: lightblue;
       }
     </style>
     </head>
