fix a typo in background-color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         color: red; 
       }
       body {
-        backround-color: lightblue;
+        background-color: rgb(255, 123, 0);
       }
     </style>
     </head>
