--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>My Awesome Website</title>
     <style>
       p {
-        color: red; 
+        color: rgb(112, 30, 0); 
       }
       body {
         background-color: rgb(255, 123, 0);
