--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     </head>
       <body>
+        <h1 style="text-align:center;">I am dark red text on an orange background</h1>
         <p>I am awsome and this is a website that uses github and html.</p>
-        <p>I am red text on a not orange backround</p>
       </body>
 </html>    
