--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
    <title>My Awesome Website</title>
     <style>
+      h1 {
+        color: rgb(112, 30, 0);
+      }
       p {
         color: rgb(112, 30, 0); 
       }
