--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
   <head>
-   <title>My Awesome Website</title>
+   <title>My Cheese Filled Website</title>
     <style>
       h1 {
         color: rgb(112, 30, 0);
@@ -16,6 +16,6 @@
     </head>
       <body>
         <h1 style="text-align:center;">I am dark red text on an orange background</h1>
-        <p>I am awsome and this is a website that uses github and html.</p>
+        <p>I am awesome and this is a website that uses github and html.</p>
       </body>
 </html>    
