--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </head>
       <body>
         <h1 style="text-align:center;">I am dark red text on an orange background</h1>
-        <p>I am awesome and this is a website that uses magic</p>
+        <p>I am awesome and this is a website that uses magic.</p>
       </body>
 </html>    
