--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCKTYPE html>
 <html>
   <head>
-   <title>My Cheese Filled Website</title>
+   <title>My Awesome Website</title>
     <style>
-      h1 {
-        color: rgb(112, 30, 0);
-      }
       p {
         color: rgb(112, 30, 0); 
       }
       body {
+        font-family:comic-sans;
         background-color: rgb(255, 123, 0);
       }
     </style>
     </head>
       <body>
         <h1 style="text-align:center;">I am dark red text on an orange background</h1>
-        <p>I am awesome and this is a website that uses magic</p>
+        <p>I am awsome and this is a website that uses github and html.</p>
       </body>
 </html>    
