--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         color: rgb(112, 30, 0); 
       }
       body {
-        font-family:comic-sans;
+        font-family:sans-serif;
         background-color: rgb(255, 123, 0);
       }
     </style>
