--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </head>
       <body>
         <h1 style="text-align:center;">I am dark red text on an orange background</h1>
-        <p>I am awsome and this is a website that uses github and html.</p>
+        <p>I am awsome and this is a website that uses magic.</p>
       </body>
 </html>    
